--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     },
     "license": "ISC",
     "dependencies": {
-        "angular2": "2.0.0-beta.3",
-        "systemjs": "0.19.6",
+        "@angular/common": "~2.4.0",
+        "@angular/compiler": "~2.4.0",
+        "@angular/core": "~2.4.0",
+        "@angular/forms": "~2.4.0",
+        "@angular/http": "~2.4.0",
+        "@angular/platform-browser": "~2.4.0",
+        "@angular/platform-browser-dynamic": "~2.4.0",
+        "@angular/router": "~3.4.0",
+
+        "systemjs": "0.19.27",
         "es6-promise": "^3.0.2",
         "es6-shim": "^0.33.3",
         "reflect-metadata": "0.1.2",
-        "rxjs": "5.0.0-beta.0",
-        "zone.js": "0.5.11"
+        "rxjs": "5.0.1",
+        "zone.js": "0.7.2"
     },
     "devDependencies": {
         "concurrently": "^1.0.0",
