--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
     "angular2-click-to-edit": "^1.0.52",
+    "dragula": "^3.7.2",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "ng2-dragula": "^1.2.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.1",
     "systemjs": "0.19.27",
